chore: fix gaps and paddings in filters and result components

--- a/src/Pages/Results/Results.css
+++ b/src/Pages/Results/Results.css
@@ -2,7 +2,7 @@
     @apply flex flex-col gap-10 h-screen w-screen p-10 pb-0 pr-0 bg-[#F6F7FF];
 }
 .left-bar{
-    @apply flex flex-col gap-10 w-60 h-screen;
+    @apply flex flex-col gap-8 w-80;
 }
 @media screen and (max-width:800px) {
     .left-bar{
